frontend-conf/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-frontend-dep
  namespace: todo-app
  annotations:
    linkerd.io/inject: enabled
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-frontend
  template:
    metadata:
      labels:
        app: todo-frontend
    spec:
      containers:
        - name: todo-frontend
          image: IMAGE_PLACEHOLDER
