frontend-conf/manifests/linkerddeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-frontend-dep
  namespace: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-frontend
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: todo-frontend
    spec:
      containers:
      - image: IMAGE_PLACEHOLDER
        name: todo-frontend
---
