frontend-conf/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todo-ing
  namespace: todo-app 
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: todo-frontend-svc
          servicePort: 2345
